# ChessProject

./: .env.dist  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
.github/workflows/: chess-project.yml
ChessProject/: asgi.py  env.py  settings.py  urls.py  wsgi.py
chess_engine/: admin.py  models.py  views.py
chess_engine/migrations/: 0001_initial.py  0002_delete_move.py  0002_initial.py  0002_move.py  0003_alter_chessgame_player.py  0003_botchessgame_is_finished_and_more.py  0004_botchessgame_winner_alter_selfchessgame_winner.py  0005_remove_botchessgame_player_and_more.py  0006_botchessgame_player.py
chess_engine/templates/chess_engine/: base.html  board.html  display_board.css  display_board.html  display_board_bot.html  home.html  start.html
news/: models.py  views.py
news/management/commands/: scrap_news.py
news/migrations/: 0001_initial.py  0002_article_image_url.py  0003_article_url.py
news/templates/news/: news.html
static/css/: display_board.css
templates/: base.html
users/: forms.py  models.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_bio_alter_customuser_location.py  0003_customuser_country_customuser_friends_and_more.py  0004_remove_friendshiprequest_created_at_and_more.py  0005_remove_customuser_total_games.py
users/templates/users/: login.html  profile.html  profile_edit.html  register.html  users_search.html
